# clin_guide

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: targets.md
docs/decisions/: chunking.md  cost-tier-routing.md  embedding-model.md
eval/datasets/: cases.json
infra/: README.md
infra/cloudformation/: ecr.yml  ecs.yml  iam.yml  network.yml  s3.yml  secrets.yml
infra/scripts/: deploy.sh
infra/terraform/: alb.tf  ecr.tf  ecs.tf  iam.tf  network.tf  outputs.tf  providers.tf  s3.tf  secrets.tf  terraform.tfvars.example  variables.tf
src/clinguide/api/: app.py  conversation.py  routes.py  streaming.py
src/clinguide/core/: config.py  models.py  tracing.py
src/clinguide/eval/: chunking_experiment.py  embedding_benchmark.py  harness.py  pairwise.py
src/clinguide/generation/: classifier.py  generator.py  grounding.py
src/clinguide/ingestion/: chunker.py  dailymed_client.py  freshness.py  guideline_parser.py  pipeline.py  spl_parser.py  synonyms.py
src/clinguide/retrieval/: bm25_search.py  embedder.py  hybrid.py  local_reranker.py  query_expansion.py  reranker.py  vector_search.py
tests/: conftest.py
tests/fixtures/: sample_spl.xml
tests/integration/: test_smoke.py
tests/unit/: test_bm25.py  test_chunker.py  test_conversation.py  test_eval_harness.py  test_guideline_parser.py  test_hybrid.py  test_pairwise.py  test_query_expansion.py  test_spl_parser.py  test_synonyms.py  test_tracing.py
ui/: app.py
