[project]
name = "clinguide"
version = "0.1.0"
description = "Clinical Guidelines RAG Assistant — retrieval-augmented generation over FDA drug labels"
requires-python = ">=3.12"
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # HTTP client
    "httpx>=0.28.0",
    # XML parsing (SPL labels)
    "lxml>=5.3.0",
    # LLM & embeddings
    "anthropic>=0.52.0",
    "openai>=1.60.0",
    # Vector DB
    "pinecone[grpc]>=5.4.0",
    # Reranker
    "cohere>=5.13.0",
    # BM25 keyword search
    "rank-bm25>=0.2.2",
    # Data models & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Tokenizer (chunk size estimation)
    "tiktoken>=0.8.0",
    # PDF parsing (CDC/NIH guidelines)
    "pymupdf>=1.25.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40.0",
]
local-reranker = [
    "sentence-transformers>=3.4.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinguide"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: end-to-end smoke tests requiring API keys and populated index",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
